Background, show-hide animation, prevent scrolling. Also, made some z-index changes for normal working animation.

--- a/themes/custom/fitpreg/src/sass/components/_header.scss
+++ b/themes/custom/fitpreg/src/sass/components/_header.scss
@@ -102,7 +102,7 @@
     
     // Main menu
     #block-fitpreg-main-menu {
-      
+      margin: 20px auto;
       .menu {
         display: flex;
         margin: 0;
@@ -158,17 +158,23 @@
       }
     } /* end of Main menu */
 
-    // Hamburger
-    .left-menu-hamburger {
+    .animated-group {
+      display: flex;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .left-menu-sandwich {
       @include square(48px, 60px);
 
-      .btn {
+      .sandwich {
         display: block;
         height: auto;
         padding: 3px 0 12px;
         width: 100%;
 
-        .line {
+        span {
           @include square(10px, 35px);
           border-bottom: 1px solid $color-black;
           display: block;
@@ -176,19 +182,15 @@
         }
       }
     }
-    
-    
+
     // Left menu in header
     #block-fitpreg-left-menu {
-      display: none;
-      position: absolute;
-      top: 0;
+      display: block;
       background-color: $color-black;
-      width: 250px;
       z-index: 1;
-      animation-duration: 1s;
-      //animation-delay: 2s;
-      animation-iteration-count: 1;
+      width: 0; // Make width=0 for animation
+      overflow: hidden;
+      transition: width 200ms ease-in-out;
 
       .left-menu-wrapper {
         .menu {
@@ -206,7 +208,13 @@
         }
       }
     } /* end of header left menu */
-    
+
+    // This class made to animate #block-fitpreg-left-menu
+    .active {
+      width: 300px !important;
+      transition: width 300ms ease-in-out;
+    }
+
     // block with awesome icons
     .icon-wrapper {
       .search-icon, .close-search {
