--- a/themes/custom/fitpreg/src/sass/fitpreg.style.scss
+++ b/themes/custom/fitpreg/src/sass/fitpreg.style.scss
@@ -2,22 +2,23 @@
 @import "partials/mixins/mixins";
 @import "partials/mixins/brakepoints";
 @import "fontawesome/font-awesome.scss";
-
 // Components
 @import "components/header";
 @import "components/footer";
 @import "components/period-block";
 @import "components/slick-slider";
 @import "components/maincont";
- 
 
 body {
   color: $color-black;
   font-family: 'Montserrat';
-  
-  .region-header, .region-footer,
-  .layout-content {
-    margin: 0 auto;
-    max-width: 1170px;
+  .layout-container {
+    position: relative;
+    .region-header, .region-footer,
+    .layout-content {
+
+      margin: 0 auto;
+      max-width: 1170px;
+    }
   }
 }
